--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ riderModule.iml
 /_ReSharper.Caches/
 .idea/
 Resources/
+VanillaPlus.sln.DotSettings.user
+Properties/Resources.Designer.cs
+Properties/Resources.resx
